// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinements options.attributes uses label 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="facet:facet-val1"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facet:facet-val2"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facetExclude:truedisjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        FacetExclude
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="disjunctiveFacet:disjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        DisjunctiveFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="hierarchicalFacet:hierarchicalFacet-val1"
    >
      <span
        className="label"
      >
        HierarchicalFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          hierarchicalFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="numericFacet>=numericFacet-val1"
    >
      <span
        className="label"
      >
        NumericFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          numericFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="_tags:tag1"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.attributes uses template 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="facet:facet-val1"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "CUSTOM TEMPLATE",
          }
        }
      />
    </li>
    <li
      className="item"
      key="facet:facet-val2"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "CUSTOM TEMPLATE",
          }
        }
      />
    </li>
    <li
      className="item"
      key="facetExclude:truedisjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        FacetExclude
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="disjunctiveFacet:disjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        DisjunctiveFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="hierarchicalFacet:hierarchicalFacet-val1"
    >
      <span
        className="label"
      >
        HierarchicalFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          hierarchicalFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="numericFacet>=numericFacet-val1"
    >
      <span
        className="label"
      >
        NumericFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          numericFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="_tags:tag1"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.clearRefinementURLs is used in an item element 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="facet:facet-val1"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facet:facet-val2"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facetExclude:truedisjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        FacetExclude
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="disjunctiveFacet:disjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        DisjunctiveFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="hierarchicalFacet:hierarchicalFacet-val1"
    >
      <span
        className="label"
      >
        HierarchicalFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          hierarchicalFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="numericFacet>=numericFacet-val1"
    >
      <span
        className="label"
      >
        NumericFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          numericFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="_tags:tag1"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a disjunctive facet 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customDisjunctiveFacet:val1"
    >
      <span
        className="label"
      >
        CustomDisjunctiveFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a facet 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customFacet:val1"
    >
      <span
        className="label"
      >
        CustomFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a hierarchical facet 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customHierarchicalFacet:val1"
    >
      <span
        className="label"
      >
        CustomHierarchicalFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with a tag 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="_tags:tag1"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with an exclude 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customExcludeFacet:trueval1"
    >
      <span
        className="label"
      >
        CustomExcludeFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.refinements can be used with numeric filters 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="customNumericFilter=val1"
    >
      <span
        className="label"
      >
        CustomNumericFilter
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="customNumericFilter<=val2"
    >
      <span
        className="label"
      >
        CustomNumericFilter
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="customNumericFilter>=val3"
    >
      <span
        className="label"
      >
        CustomNumericFilter
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          val3
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements options.templateProps passes a custom template if given 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="facet:facet-val1"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facet:facet-val2"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facetExclude:truedisjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        FacetExclude
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="disjunctiveFacet:disjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        DisjunctiveFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="hierarchicalFacet:hierarchicalFacet-val1"
    >
      <span
        className="label"
      >
        HierarchicalFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          hierarchicalFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="numericFacet>=numericFacet-val1"
    >
      <span
        className="label"
      >
        NumericFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          numericFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="_tags:tag1"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements renders 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="facet:facet-val1"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facet:facet-val2"
    >
      <span
        className="label"
      >
        Facet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          facet-val2
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="facetExclude:truedisjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        FacetExclude
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="disjunctiveFacet:disjunctiveFacet-val1"
    >
      <span
        className="label"
      >
        DisjunctiveFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          disjunctiveFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="hierarchicalFacet:hierarchicalFacet-val1"
    >
      <span
        className="label"
      >
        HierarchicalFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          hierarchicalFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="numericFacet>=numericFacet-val1"
    >
      <span
        className="label"
      >
        NumericFacet
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          numericFacet-val1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="item"
      key="_tags:tag1"
    >
      <span
        className="label"
      >
        _tags
        :
      </span>
      <span
        className="category"
      >
        <span
          className="categoryLabel"
        >
          tag1
        </span>
        <button
          className="delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;
